# post-09

./: .gitignore  PLAN.md  README.md
docs/: PLAN.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: Account.svelte  AccountConfig.svelte  ChoiceButton.svelte  DrawBarGraph.svelte  DrawBox.svelte  DrawSituationList.svelte  Logo.svelte  PWABadge.svelte  Player.svelte  PlaylistButton.svelte  PressButton.svelte  Screen.svelte  SelectButton.svelte  StartButton.svelte  Typewriter.svelte  Window.svelte
server/: .cache  .env.local  .gitignore  pyproject.toml
server/db/: test_activities.db  test_activitites.db
server/src/analysis/: analysis.py
server/src/analysis/tests/: test_activities.json  test_analysis.py
server/src/models/: activities.py  activity.py
server/src/server/: __main__.py
server/src/storage/: db_storage.py  json_storage.py  storage.py
server/src/storage/json/: activities.json
server/src/storage/tests/: test_activities.json  test_db_storage.py  test_json_storage.py
server/src/strage/: json_strage.py
server/src/strage/json/: activities.json
server/src/suggester/: README.md  __main__.py  api_test.py  api_test_first.py  llm.py  llm_temp.py  llm_test.py  spitify_api.py  suggester.py  suggester_core.py  suggester_core_deprecated.py  suggester_models.py  track_ids.json
server/src/suggester/resources/: .gitignore  track_ids.json
server/src/utils/: lib.py
server/test_data/: test_activities.json
(+12 files in other folders)
